--- a/index.html
+++ b/index.html
@@ -294,7 +294,16 @@
                         <h3 class="timeline-title">Cloud Engineer Intern — SpaceZee Technologies</h3>
                         <span class="timeline-date">June 2024 to July 2024</span>
                         <p class="timeline-description">
-                            Worked on Employee Management System - Internal Application Project with AWS RDS, HTML, CSS, JS & Django.
+                            Worked on Deployment of Employee Management System - Internal Application Project with AWS RDS.
+                        </p>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3 class="timeline-title">Part - Time Instructor — Quest Technologies</h3>
+                        <span class="timeline-date">March 2024 to June 2025</span>
+                        <p class="timeline-description">
+                            Mentored 30+ students, assisting them with projects and AWS certification preparation.
                         </p>
                     </div>
                 </div>
