--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <p class="hero-subtitle">AWS | DevOps | Python | AI/ML</p>
                 <div class="hero-buttons">
                      <a href="#projects" class="btn btn-primary">View My Projects</a>
-                    <a href="https://drive.google.com/file/d/1n-lrp3YmBGiEZoGplXqQjfyjx1Dqx6qi/view?usp=sharing" class="btn btn-secondary">Download Resume</a>
+                    <a href="https://drive.google.com/file/d/1I5P6JCWbZwyYRyY0cDE5wh1wxDj6bFtH/view?usp=sharing" class="btn btn-secondary">Download Resume</a>
                     <a href="#blog" class="btn btn-secondary">My Blog</a>
                 </div>
             </div>
@@ -393,7 +393,7 @@
             <div class="footer-links">
                 <a href="https://github.com/vickydgh" class="footer-link">GitHub</a>
                 <a href="https://www.linkedin.com/in/vignesh-deenadayalan" class="footer-link">LinkedIn</a>
-                <a href="https://drive.google.com/drive/u/0/folders/17l2Bi_Vb7srtxaC9hQcbAplLgzkk3gX5" class="footer-link">Resume</a>
+                <a href="https://drive.google.com/file/d/1I5P6JCWbZwyYRyY0cDE5wh1wxDj6bFtH/view?usp=sharing" class="footer-link">Resume</a>
             </div>
         </div>
     </footer>
