--- a/index.html
+++ b/index.html
@@ -264,6 +264,26 @@
                 <!-- Project 6 -->
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="assets/automotive-analysis.png" alt="Loan Risk Analytics Dashboard">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Automotive Analytics Dashboard</h3>
+                        <p class="project-description">An end-to-end Power BI project analyzing car features, pricing, and market trends with custom DAX measures, KPI dashboards, and interactive slicers.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">Power BI</span>
+                            <span class="tech-tag">Power Query Editor</span>
+                            <span class="tech-tag">Data Analytics</span>
+                            <span class="tech-tag">Dashboard</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/vickydgh/Automotive-Analysis-Dashboard.git" class="project-link">GitHub</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 7 -->
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="assets/iot-fall-detection.png" alt="IoT Fall Detection">
                     </div>
                     <div class="project-content">
